--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+.App{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+h1{
+  position: absolute;
+  top: 0;
+  color: violet;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  height: 350px;
+  width: 250px;
+  margin-top: 100px;
+  border: 5px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: gray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-box{
+  height: 60px;
+  width: 230px;
+  border-radius: 8px;
+  padding: 5px;
+  background-color: #444;
+  border: none;
+  color:#fff ;
+  font-size: 20px;
+  text-align: right;
+  font-weight: 400;
+  letter-spacing: 1px;
+
+}
+button{
+  margin: 5px;
+  padding: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: #777;
+  border-radius:5px;
+}
+
+.keypad{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-auto-rows: minmax(6px,auto);
+}
+
+#equal{
+  grid-column: 3/5;
+}
+.highlight{
+  background-color: coral;
 }
